# triblocksolve

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makescript.sh
data/: setdata.sh
data/ex05/: line.input.data
include/: Jacobian.hxx  Mesh.hxx  Platform.hxx  core.hxx  memory.hxx
src/: CMakeLists.txt  Jacobian.cxx  Mesh.cxx  Platform.cxx  main.cxx
src/F90/: linesmoothLU.f90  read_jacobian_data.F90  read_mesh_data.F90
src/okl/: lineLU_v1.okl  lineLU_v2.okl  linesmoothLU_TriBlock_v1.okl  linesmoothLU_TriBlock_v2.okl  linesmoothLU_TriBlock_v4.okl  linesmoothLU_v1.okl  linesmoothLU_v2.okl  linesmoothLU_v3.okl  linesmoothLU_v4.okl  linesmoothLU_v5.okl  linesmoothLU_v6.okl  linesmoothLU_v7.okl  linesmoothLU_v8.okl
